<resources>
    <string name="app_name">ChatApp</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>

    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="already_have_account">Already have account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there. I\'m using ChatApp</string>
    <string name="enter_message">Enter Message...</string>

</resources>
